Added more warnings that have been introduced between the last update and Xcode 4.6.

--- a/Warnings.xcconfig
+++ b/Warnings.xcconfig
@@ -10,6 +10,9 @@
 GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
 GCC_WARN_SHADOW = YES
 GCC_WARN_64_TO_32_BIT_CONVERSION = YES
+CLANG_WARN_ENUM_CONVERSION = YES
+CLANG_WARN_INT_CONVERSION = YES
+CLANG_WARN_CONSTANT_CONVERSION = YES
 GCC_WARN_INITIALIZER_NOT_FULLY_BRACKETED = YES
 GCC_WARN_ABOUT_RETURN_TYPE = YES
 GCC_WARN_MISSING_PARENTHESES = YES
@@ -30,6 +33,8 @@ GCC_WARN_NON_VIRTUAL_DESTRUCTOR = YES
 CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
 CLANG_WARN_IMPLICIT_SIGN_CONVERSION = YES
 CLANG_WARN_SUSPICIOUS_IMPLICIT_CONVERSION = YES
+CLANG_WARN_EMPTY_BODY = YES
+CLANG_ANALYZER_SECURITY_FLOATLOOPCOUNTER = YES
 OTHER_CFLAGS = -Wextra -Wno-unused-parameter
 GCC_TREAT_WARNINGS_AS_ERRORS = YES
 RUN_CLANG_STATIC_ANALYZER = YES
