--- a/Warnings.xcconfig
+++ b/Warnings.xcconfig
@@ -35,6 +35,6 @@ CLANG_WARN_IMPLICIT_SIGN_CONVERSION = YES
 CLANG_WARN_SUSPICIOUS_IMPLICIT_CONVERSION = YES
 CLANG_WARN_EMPTY_BODY = YES
 CLANG_ANALYZER_SECURITY_FLOATLOOPCOUNTER = YES
-OTHER_CFLAGS = -Wextra -Wno-unused-parameter
+OTHER_CFLAGS = -Wextra -Wno-unused-parameter -Wformat=2
 GCC_TREAT_WARNINGS_AS_ERRORS = YES
 RUN_CLANG_STATIC_ANALYZER = YES
