--- a/Warnings.xcconfig
+++ b/Warnings.xcconfig
@@ -11,7 +11,7 @@ GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
 GCC_WARN_SHADOW = YES
 GCC_WARN_64_TO_32_BIT_CONVERSION = YES
 CLANG_WARN_ENUM_CONVERSION = YES
-CLANG_WARN_INT_CONVERSION = YES
+//CLANG_WARN_INT_CONVERSION = YES
 CLANG_WARN_CONSTANT_CONVERSION = YES
 CLANG_WARN_BOOL_CONVERSION = YES;
 CLANG_WARN_UNREACHABLE_CODE = YES_AGGRESSIVE;
@@ -20,7 +20,7 @@ GCC_WARN_ABOUT_RETURN_TYPE = YES
 GCC_WARN_MISSING_PARENTHESES = YES
 GCC_WARN_ABOUT_MISSING_FIELD_INITIALIZERS = YES
 GCC_WARN_ABOUT_MISSING_NEWLINE = YES
-GCC_WARN_SIGN_COMPARE = YES
+//GCC_WARN_SIGN_COMPARE = YES
 GCC_WARN_UNDECLARED_SELECTOR = YES
 GCC_WARN_UNINITIALIZED_AUTOS = YES_AGGRESSIVE;
 GCC_WARN_UNUSED_FUNCTION = YES
@@ -34,15 +34,15 @@ GCC_WARN_HIDDEN_VIRTUAL_FUNCTIONS = YES
 GCC_WARN_ABOUT_INVALID_OFFSETOF_MACRO = YES
 GCC_WARN_NON_VIRTUAL_DESTRUCTOR = YES
 CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
-CLANG_WARN_IMPLICIT_SIGN_CONVERSION = YES
+//CLANG_WARN_IMPLICIT_SIGN_CONVERSION = YES
 CLANG_WARN_SUSPICIOUS_IMPLICIT_CONVERSION = YES
-CLANG_WARN_ASSIGN_ENUM = YES
+//CLANG_WARN_ASSIGN_ENUM = YES
 CLANG_WARN_EMPTY_BODY = YES
 CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
-CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = YES
+//CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = YES
 CLANG_ANALYZER_SECURITY_FLOATLOOPCOUNTER = YES
 CLANG_ANALYZER_SECURITY_INSECUREAPI_RAND = YES
 CLANG_ANALYZER_SECURITY_INSECUREAPI_STRCPY = YES
 OTHER_CFLAGS = -Wextra -Wno-unused-parameter -Wformat=2 -Wunreachable-code
-GCC_TREAT_WARNINGS_AS_ERRORS = YES
+//GCC_TREAT_WARNINGS_AS_ERRORS = YES
 RUN_CLANG_STATIC_ANALYZER = YES
